--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
     annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    implementation "org.springframework.boot:spring-boot-starter-mail"
 }
 
 tasks.named('test') {
