:sparkles: 이메일 중복 체크 및 이메일 인증번호 체크

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   profiles:
-    active: dev
+    active: dev, email
+  config:
+    import:
+      - application-email.yml
   jpa:
     properties:
       hibernate:
