--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,8 +34,8 @@ jobs:
               SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.h2.Driver
               SPRING_DATASOURCE_USERNAME: sa
               SPRING_DATASOURCE_PASSWORD: password
-              SPRING_EMAIL: ${{ secrets.EMAIL }}
-              SPRING_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+              SPRING_MAIL_EMAIL: ${{ secrets.EMAIL }}
+              SPRING_MAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
 
       - name: Backend CI Slack Notification (Success)
         if: success()
