--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev, email
+    active: local, email, security
   config:
     import:
       - application-email.yml
@@ -10,3 +10,7 @@ spring:
         format_sql: true
         show_sql: true
     open-in-view: false
+
+  web:
+    resources:
+      add-mappings: false
