:wrench: yml 파일 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev, email, security
+    active: dev, security, email
   config:
     import:
       - application-email.yml
