--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,26 @@ spring:
         format_sql: true
         show_sql: true
     open-in-view: false
-
   web:
     resources:
       add-mappings: false
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .html
+# Server Configuration
+server:
+  port: 8080
+# Logging
+logging:
+  level:
+    root: INFO
+    com.mycom.ocrtest: DEBUG
+# File Upload Directory
+file:
+  upload-dir: src/main/resources/static/img
+# OCR API Configuration
+ocr:
+  api:
+    url: ${OCR_API_URL}
+    secret-key: ${OCR_SECRET_KEY}
