:wrench: gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     //E-MAIL
     implementation "org.springframework.boot:spring-boot-starter-mail"
 
+    // Add json-simple for JSON processing
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.json:json:20230618'
+
 
 }
 
