--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,12 +6,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${DB_HOST}:3306/daeng_place?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${DB_USERNAME}
-    password: ${DEV_DB_PASSWORD}  # 환경 변수에서 가져옴
+    password: ${DB_PASSWORD}
+
   jpa:
     hibernate:
       ddl-auto: create
-
-logging:
-  level:
-    root: info
-    com.mycom: debug
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
