:wrench: yml 파일 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ logging:
   level:
     root: INFO
     com.mycom: DEBUG
+ocr:
+  api:
+    url: ${OCR_API_URL}
+    secret-key: ${OCR_SECRET_KEY}
 
 file:
   upload-dir: src/main/resources/static/img
