--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -1,26 +1,38 @@
 spring:
-  config:
-    activate:
-      on-profile: security
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/daeng_place?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: root0622
+
+  jpa:
+    hibernate:
+      ddl-auto: update  # 테이블 자동 생성
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+
   security:
     oauth2:
       client:
         registration:
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
-            client-secret: ""
-            redirect-uri: ${OAUTH2_REDIRECT_URI}/kakao
+            client-secret: ""  # Kakao는 secret이 optional
+            redirect-uri: http://api.daengplace.com/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             scope: profile_nickname, profile_image
             client-name: Kakao
             provider: kakao
           google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: ${OAUTH2_REDIRECT_URI}/google
+            client-id: ${GOOGLE_CLIENT_ID}  # Google에서 발급받은 Client ID
+            client-secret: ${GOOGLE_CLIENT_SECRET}  # Google에서 발급받은 Client Secret
+            redirect-uri: http://api.daengplace.com/login/oauth2/code/google
             authorization-grant-type: authorization_code
             scope: profile, email
             client-name: Google
+
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
@@ -29,10 +41,10 @@ spring:
             user-name-attribute: id
 
   jwt:
-    secret: ${JWT_SECRET_KEY}
-    refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}
-    access-token-validity: 600000
-    refresh-token-validity: 2592000000
+    secret: ${JWT_SECRET_KEY}  # Access 토큰 비밀 키
+    refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}  # Refresh 토큰 비밀 키 (새로운 키 추가)
+    access-token-validity: 600000  # Access 토큰 유효기간 (예: 10분)
+    refresh-token-validity: 2592000000  # Refresh 토큰 유효기간
 
 dog:
   api:
