--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -21,6 +21,7 @@ spring:
             authorization-grant-type: authorization_code
             scope: profile, email
             client-name: Google
+
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
@@ -30,7 +31,7 @@ spring:
 
   jwt:
     secret: ${JWT_SECRET_KEY}
-    refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}  )
+    refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}
     access-token-validity: 600000
     refresh-token-validity: 2592000000
 
