--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -32,7 +32,7 @@ spring:
   jwt:
     secret: ${JWT_SECRET_KEY}
     refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}
-    access-token-validity: 600000
+    access-token-validity: 604800000
     refresh-token-validity: 2592000000
 
 dog:
