--- a/src/main/resources/application-email.yml
+++ b/src/main/resources/application-email.yml
@@ -3,10 +3,12 @@ spring:
     activate:
       on-profile: email
   mail:
-    host: smtp.gmail.com
-    port: 587
+
+    host: ${SMTP_HOST}
+    port: ${SMTP_PORT}
     username: ${EMAIL}
     password: ${EMAIL_PASSWORD}
+
     properties:
       mail:
         smtp:
