--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -9,15 +9,15 @@ spring:
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ""
-            redirect-uri: http://api.daengplace.com/login/oauth2/code/kakao
+            redirect-uri: https://api.daengplace.com/oauth2/kakao/callback
             authorization-grant-type: authorization_code
-            scope: profile_nickname, profile_image
+            scope: profile_nickname, account_email
             client-name: Kakao
             provider: kakao
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: http://api.daengplace.com/login/oauth2/code/google
+            redirect-uri: https://api.daengplace.com/oauth2/google/callback
             authorization-grant-type: authorization_code
             scope: profile, email
             client-name: Google
@@ -32,7 +32,7 @@ spring:
   jwt:
     secret: ${JWT_SECRET_KEY}
     refresh-secret-key: ${JWT_REFRESH_SECRET_KEY}
-    access-token-validity: 600000
+    access-token-validity: 604800000
     refresh-token-validity: 2592000000
 
 dog:
