--- a/src/main/resources/application-security.yml
+++ b/src/main/resources/application-security.yml
@@ -9,7 +9,7 @@ spring:
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ""
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: https://api.daengplace.com/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             scope: profile_nickname, profile_image
             client-name: Kakao
@@ -17,7 +17,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            redirect-uri: https://api.daengplace.com/login/oauth2/code/google
             authorization-grant-type: authorization_code
             scope: profile, email
             client-name: Google
